# bridgette

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
src/: app.rs  config.rs  main.rs  types.rs
src/agent/: mod.rs  parse.rs  prompt.rs  tutor.rs
src/engine/: bid_constraints.rs  bidding.rs  card.rs  contract.rs  deck.rs  game.rs  hand.rs  inference.rs  mod.rs  play.rs  scoring.rs  tests.rs  trick.rs
src/ui/: bid_selector.rs  bidding_panel.rs  board.rs  controls.rs  dialog.rs  library.rs  mod.rs  palette.rs  probability_grid.rs  review.rs  score_panel.rs  trick_history.rs  tutor.rs
